manifest/ingress-cert.yaml
# kubectl create ingress bankapp-ingress --annotation ibtisam=loveyou --class nginx --rule www.ibtisam-iq.com/*=bankapp-service:80,tls=ibtisamiq-tls --dry-run=client -o yaml


# -------------------------------
# Kubernetes Ingress Configuration for Banking App
# -------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankapp-ingress
  annotations:
    # Annotation for cert-manager to use Let's Encrypt production environment for issuing certificates.
    # cert-manager is responsible for managing SSL certificates in Kubernetes.

    # Tells cert-manager to use the below ClusterIssuer for TLS.
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # Force SSL redirection to ensure all traffic is encrypted # Redirects all HTTP traffic to HTTPS.
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # Rewrite the path to root URL to handle requests correctly.
    nginx.ingress.kubernetes.io/rewrite-target: /
    # Enable SSL redirection to ensure all traffic is encrypted.
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # Defines backend service communication protocol.
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"


spec:
  # Defines which ingress controller to use. Here, it's 'nginx' (Kubernetes-native ingress controller).
  # Specifies that this Ingress uses the NGINX Ingress Controller.
  ingressClassName: nginx

  rules:
    - host: www.ibtisam-iq.com  # The domain name for routing traffic to the backend service.
      http:
        paths:
          - path: /
            pathType: Prefix  # Ensures that all requests starting with "/" are routed.
            backend:
              service:
                name: bankapp-service  # The Kubernetes service that handles the requests and routes traffic to the bank app.
                port:
                  number: 80  # The target port of the backend service.

  tls:
    - hosts:
        - www.ibtisam-iq.com  # Hostname to secure with SSL. This is the domain name that will be secured.
      secretName: ibtisamiq-tls  # Kubernetes Secret where the TLS certificate will be stored. This is the secret that Stores the TLS certificate and private key.
